# cuda_tutorial

./: .gitignore
course3/: softmax.cu  softmax_prac.cu
course4/: reduce.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu
course5/: matmul0.cu  matmul1  matmul1.cu  matmul2  matmul2.cu  matmul2_prac.cu  matmul3.cu  matmul3_prac.cu  matmul4.cu  matmul5  matmul5.cu  sgemm_benchmark_v2.csv  sgemm_benchmark_v3.csv  sgemm_benchmark_v7.csv
course8/: profile.txt  rmsnorm  rmsnorm.cu  rmsnorm_profile.ncu-rep
course9/: flash.attn.cu  flashattention.cu
cuda_code_ref/: CMakeLists.txt
cuda_code_ref/course1/: hello_world.cu
cuda_code_ref/course12/: CMakeLists.txt  base_conv.cu  conv.py  gemm.py  im2col.cu
cuda_code_ref/course13/: CMakeLists.txt  kogge_stone.cu  kogge_stone_shared.cu  multi_block_scan.cu  work_efficient_scan.cu
cuda_code_ref/course2/: CMakeLists.txt
cuda_code_ref/course3/: ## GitHub Copilot Chat.md  softmax_naive.cu
cuda_code_ref/course4/: reduce.cu  reduce_v1.cu  reduce_v2.cu  reduce_v3.cu
cuda_code_ref/course5_1/: matmul0.cu  matmul1  matmul1.cu  matmul2.cu  matmul3.cu  matmul4  matmul4.cu  matmul5  matmul5.cu  sgemm_benchmark_double_buffering.csv  sgemm_benchmark_v7.csv
cuda_code_ref/course6/: CMakeLists.txt  histogram.cu  histogram_shared.cu
cuda_code_ref/course7/: transpose_bench.cu
cuda_code_ref/course8/: rmsnorm.cu
cuda_code_ref/course9/: flash_attn.cu
